--- a/index.html
+++ b/index.html
@@ -35,11 +35,11 @@
 		<div class="container">
 			<div class="navbar-brand">
 				<span class="navbar-logo">
-					<a href="*****">
+					<a href="#">
 						<img src="assets/images/img-2577.png-1-221x132.png" alt="Mobirise Website Builder" style="height: 4.3rem;">
 					</a>
 				</span>
-				<span class="navbar-caption-wrap"><a class="navbar-caption text-black display-4" href="*****">fifteen70</a></span>
+				<span class="navbar-caption-wrap"><a class="navbar-caption text-black display-4" href="#">fifteen70</a></span>
 			</div>
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-bs-toggle="collapse" data-target="#navbarSupportedContent" data-bs-target="#navbarSupportedContent" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
 				<div class="hamburger">
@@ -52,18 +52,18 @@
 			<div class="collapse navbar-collapse" id="navbarSupportedContent">
 				<ul class="navbar-nav nav-dropdown" data-app-modern-menu="true">
 					<li class="nav-item">
-						<a class="nav-link link text-black display-4" href="*****">Home</a>
+						<a class="nav-link link text-black display-4" href="#">Home</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link link text-black display-4" href="*****" aria-expanded="false">Projects</a>
+						<a class="nav-link link text-black display-4" href="#" aria-expanded="false">Projects</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link link text-black display-4" href="*****">Investors</a>
+						<a class="nav-link link text-black display-4" href="#">Investors</a>
 					</li>
 				</ul>
 				
 				<div class="navbar-buttons mbr-section-btn">
-					<a class="btn btn-primary display-4" href="*****">Join Us</a>
+					<a class="btn btn-primary display-4" href="#">Join Us</a>
 				</div>
 			</div>
 		</div>
@@ -82,7 +82,7 @@
         
         <p class="mbr-fonts-style mbr-text mbr-white mb-4 display-7">Building Communities, One Apartment at a Time!</p>
         <div class="mbr-section-btn">
-          <a class="btn btn-white-outline display-7" href="*****">Get Started</a>
+          <a class="btn btn-white-outline display-7" href="#">Get Started</a>
         </div>
       </div>
     </div>
@@ -666,7 +666,7 @@
 						</h1>
 						<p class="mbr-text mbr-fonts-style mb-4 display-7">Invest in projects that uplift our community.</p>
 						<div class="mbr-section-btn mt-4">
-                            <a class="btn btn-primary display-7" href="*****">Get Involved</a>
+                            <a class="btn btn-primary display-7" href="#">Get Involved</a>
                         </div>
 					</div>
 				</div>
@@ -703,22 +703,22 @@
             <div class="col-12">
                 <div class="social-row">
                     <div class="soc-item">
-                        <a href="*****/" target="_blank">
+                        <a href="#/" target="_blank">
                             <span class="mbr-iconfont socicon socicon-facebook"></span>
                         </a>
                     </div>
                     <div class="soc-item">
-                        <a href="*****/" target="_blank">
+                        <a href="#/" target="_blank">
                             <span class="mbr-iconfont socicon-twitter socicon"></span>
                         </a>
                     </div>
                     <div class="soc-item">
-                        <a href="*****/" target="_blank">
+                        <a href="#/" target="_blank">
                             <span class="mbr-iconfont socicon-instagram socicon"></span>
                         </a>
                     </div>
                     <div class="soc-item">
-                        <a href="*****/" target="_blank">
+                        <a href="#/" target="_blank">
                             <span class="mbr-iconfont socicon socicon-linkedin"></span>
                         </a>
                     </div>
@@ -854,22 +854,22 @@
             <div class="col-12 mt-4">
                 <div class="social-row">
                     <div class="soc-item">
-                        <a href="*****/" target="_blank">
+                        <a href="#/" target="_blank">
                             <span class="mbr-iconfont socicon socicon-facebook display-7"></span>
                         </a>
                     </div>
                     <div class="soc-item">
-                        <a href="*****/" target="_blank">
+                        <a href="#/" target="_blank">
                             <span class="mbr-iconfont socicon-twitter socicon"></span>
                         </a>
                     </div>
                     <div class="soc-item">
-                        <a href="*****/" target="_blank">
+                        <a href="#/" target="_blank">
                             <span class="mbr-iconfont socicon-instagram socicon"></span>
                         </a>
                     </div>
                     <div class="soc-item">
-                        <a href="*****/" target="_blank">
+                        <a href="#/" target="_blank">
                             <span class="mbr-iconfont socicon socicon-linkedin"></span>
                         </a>
                     </div>
